src/main/default/objects/DR_Transaction_Payment__c/DR_Transaction_Payment__c.object-meta.xml
<CustomObject>
    <description>Store transaction-related information</description>
    <label>Digital River Transaction Payment</label>
    <nameField>
        <displayFormat>DRTP-{0000}</displayFormat>
        <label>DR Transaction Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital River Transaction Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>