src/main/default/objects/DR_Transaction_Payment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account of the user that created this transaction payment.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Digital River Transaction Payments</relationshipLabel>
    <relationshipName>Digital_River_Transaction_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>