src/main/default/objects/DR_Transaction_Payment__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Actual transaction amount.</description>
    <inlineHelpText>Actual transaction amount.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>