src/main/default/objects/DR_Transaction_Payment__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <description>Last four digit of card.</description>
    <label>Card Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>