src/main/default/objects/DR_Transaction_Payment__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <description>Type of card like Visa, Master</description>
    <label>Card Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>