src/main/default/objects/DR_Transaction_Payment__c/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the cart this payment was applied to.</description>
    <label>Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>Digital River Transaction Payments</relationshipLabel>
    <relationshipName>Digital_River_Transaction_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>