src/main/default/objects/DR_Transaction_Payment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact of the user that created this transaction payment.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Digital River Transaction Payments</relationshipLabel>
    <relationshipName>Digital_River_Transaction_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>