src/main/default/objects/DR_Transaction_Payment__c/fields/CurrencyISOCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyISOCode__c</fullName>
    <description>Currency Code for this transaction like USD, GBP</description>
    <label>CurrencyISOCode</label>
    <length>32</length>
    <type>Text</type>
</CustomField>