src/main/default/objects/DR_Transaction_Payment__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Display name for payment.</description>
    <inlineHelpText>Display name for payment.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>