src/main/default/objects/DR_Transaction_Payment__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the order this payment was applied to.</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Digital River Transaction Payments</relationshipLabel>
    <relationshipName>Digital_River_Transaction_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>