src/main/default/objects/DR_Transaction_Payment__c/fields/Payment_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Payment_Instructions__c</fullName>
    <description>Payment instructions eg in case or wire transfer it can we bank information</description>
    <label>Payment Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>