src/main/default/objects/DR_Transaction_Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>The Payment type of the payment, e.g.  Credit Card,PayPal etc.</description>
    <label>Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>