src/main/default/objects/DR_Transaction_Payment__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Tokenized form of the payment</description>
    <label>Token</label>
    <length>128</length>
    <type>Text</type>
</CustomField>