src/main/default/objects/DR_Transaction_Payment__c/fields/Transaction_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Payment_Id__c</fullName>
    <description>External id used for data loading or other access</description>
    <externalId>true</externalId>
    <label>Transaction Payment Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>