src/main/default/objects/DR_Transaction_Payment__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Type of the transaction, e.g. for a credit card this might be AUTH, CAPTURE, or AUTH+CAPTURE. This is provider specific.</description>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>