src/main/default/objects/DR_Transaction_Payment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that created this transaction payment.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Digital_River_Transaction_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>